2015-02-23  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.target/s390/hotpatch-1.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-10.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-11.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-12.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-13.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-14.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-15.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-16.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-17.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-18.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-19.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-2.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-20.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-3.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-4.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-5.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-6.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-7.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-8.c: Remove --save-temps option.
	* gcc.target/s390/hotpatch-9.c: Remove --save-temps option.
	* gcc.target/s390/htm-nofloat-1.c: Cleanup --save-temps files.

2015-02-23  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.target/s390/hotpatch-8.c: Add -march=g5.
	* gcc.target/s390/hotpatch-9.c: Add -march=g5.
	* gcc.target/s390/hotpatch-compile-1.c: Fix error message.
	* gcc.target/s390/hotpatch-compile-10.c: Likewise.
	* gcc.target/s390/hotpatch-compile-11.c: Likewise.
	* gcc.target/s390/hotpatch-compile-12.c: Likewise.
	* gcc.target/s390/hotpatch-compile-13.c: Likewise.
	* gcc.target/s390/hotpatch-compile-14.c: Likewise.
	* gcc.target/s390/hotpatch-compile-2.c: Likewise.
	* gcc.target/s390/hotpatch-compile-3.c: Likewise.
	* gcc.target/s390/hotpatch-compile-4.c: Likewise.