@@ -1,5 +1,12 @@
 2015-02-23  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
+	* gcc.target/s390/20090223-1.c: Add
+	-Wno-implicit-function-declaration option.
+	* gcc.target/s390/pr42224.c: Likewise.
+	* gcc.target/s390/pr55718.c: Likewise.
+
+2015-02-23  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
+
 	* gcc.target/s390/hotpatch-1.c: Remove --save-temps option.
 	* gcc.target/s390/hotpatch-10.c: Remove --save-temps option.
 	* gcc.target/s390/hotpatch-11.c: Remove --save-temps option.
